-fix video overflow;

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@ body {
 }
 
 .header-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
   width: 100%;
   height: 50px;
   display: flex;
@@ -46,8 +50,8 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 5px 10px;
-  flex-shrink: 0;
   -webkit-app-region: drag;
+  background-color: white;
 }
 
 .header-container>.title-container {
@@ -76,6 +80,7 @@ body {
 
 .video-container {
   width: 100%;
+  padding-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -88,5 +93,6 @@ body {
   flex-grow: 1;
   width: 100%;
   max-width: 100%;
-  height: auto;
+  height: 100%;
+  max-height: 100%;
 }
